# MNN

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSUMPTIONS.md  BABEL_SIPHON_IMPLEMENTATION_SUMMARY.md  BABEL_SIPHON_README.md  CHANGELOG.md  CONTRIBUTING.md  DECISION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  METADATA.json  MNN_COMPLETE.md  MNN_IMPLEMENTATION_REPORT.md  Makefile  OBSERVABILITY_REPORT.md  PR3_REVIEW_REPORT.md  README.md  SECURITY.md  SMOKE-LOG.txt  VALIDATION_REPORT.md  api.py  auth.py  auth_utils.py  checkpoint_replay.py  checkpoints.py  config.py  demo_mnn.py  demo_observability.py  design_guidelines.json  docker-compose.yml  feedback.py  feedback_data.json  guardrails.py  infra_status.py  logging_config.py  main.py  (+11 more)
.github/: copilot-instructions.md  pull_request_template.md
backend/: server.py
devops/: README.md
docker-build/: Dockerfile  docker-compose.yml
docs/: QUICKSTART.md  SUMMARY.md  TECHNICAL.md
examples/: operational_sequence.py
frontend/: README.md  index.html  package.json
include/: deterministic_state.hpp  mnn_core.hpp
memory/: PRD.md
mnn/: README_MNN.md  __init__.py  analyzer.py  api.py  babel_siphon.py  cache.py  constraint_generator.py  index_mapper.py  main.py  output_handler.py  pipeline.py  query_normalizer.py  requirements_mnn.txt  scorer.py  sequence_generator.py
mnn_pipeline/: __init__.py  analyzer.py  constraint_generator.py  index_mapper.py  output_handler.py  query_classifier.py  query_normalizer.py  scorer.py  sequence_generator.py  synonym_expander.py
scripts/: verify_docker_reproducibility.sh  verify_host_variance.py
sql/: relational_buffer_schema.sql
src/: __init__.py  deterministic_state.cpp  mnn_core.cpp
test_reports/: SMOKE-LOG.txt  iteration_1.json  iteration_2.json  iteration_3.json
tests/: __init__.py  test_agent.py  test_api.py  test_auth.py  test_auth_dashboard.py  test_babel_siphon.py  test_buffer.py  test_checkpoints.py  test_config.py  test_cross_language_rng.py  test_determinism_new_features.py  test_deterministic_runtime_review.py  test_deterministic_suite.py  test_encryption.py  test_feedback_integration.py  test_guardrails.py  test_integration.py  test_logging.py  test_metrics.py  test_middleware.py  test_mind.py  test_mnn_pipeline.py  test_observability.py  test_permutation.py  test_pipeline.py  test_production_metrics.py  (+6 more)
(+98 files in other folders)
