[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mnn-pipeline"
version = "1.0.0"
description = "Matrix Neural Network (MNN) – deterministic query pipeline and SMT-validated content engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "psycopg2-binary==2.9.9",
    "cryptography==46.0.5",
    "fastapi==0.110.3",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.2",
    "z3-solver==4.13.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
]

[project.scripts]
mnn-agent = "mnn.agent.__main__:main"
mnn-query = "mnn.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnn*", "mnn_pipeline*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
