[project]
name = "mnn"
version = "1.0.0"
description = "Deterministic Matrix Neural Network knowledge engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["mnn", "mnn_pipeline", "api", "main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
