[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnn-pipeline"
version = "2.0.0"
description = "Matrix Neural Network (MNN) - THALOS deterministic pipeline"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "psycopg2-binary==2.9.9",
    "cryptography==46.0.5",
    "fastapi==0.121.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.2",
    "z3-solver==4.13.4.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mnn/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnn*", "mnn_pipeline*", "tools*"]
